fix: incluir novo handler; corrigir cors